# template

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  vix.json
.github/workflows/: template-strict-ci.yml
benchmarks/: CMakeLists.txt  cache_bench.cpp  parse_bench.cpp  render_bench.cpp
cmake/: Config.cmake.in
docs/: architecture.md  ast.md  rendering.md  roadmap.md  syntax.md
examples/: CMakeLists.txt  render_file.cpp
include/vix/template/: AST.hpp  Builtins.hpp  Cache.hpp  Compiler.hpp  Context.hpp  Engine.hpp  Environment.hpp  Error.hpp  Escape.hpp  ExecutionPlan.hpp  FileSystemLoader.hpp  Instruction.hpp  Lexer.hpp  Loader.hpp  Optimizer.hpp  Parser.hpp  RenderResult.hpp  Renderer.hpp  StringLoader.hpp  Template.hpp  Token.hpp  Value.hpp  Version.hpp  all.hpp
src/: Builtins.cpp  Cache.cpp  Compiler.cpp  Context.cpp  Engine.cpp  Environment.cpp  Error.cpp  Escape.cpp  FileSystemLoader.cpp  Lexer.cpp  Loader.cpp  Optimizer.cpp  Parser.cpp  Renderer.cpp  StringLoader.cpp  Template.cpp  Value.cpp
template/: home.html
template/components/: card.html
template/partials/: footer.html  header.html
templates/: base.html
tests/: CMakeLists.txt  cache_test.cpp  compiler_test.cpp  engine_test.cpp  escape_test.cpp  integration_render_test.cpp  lexer_test.cpp  loader_test.cpp  parser_test.cpp  renderer_test.cpp
